--- a/laporte/templates/data.html
+++ b/laporte/templates/data.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}sensors{% endblock %}
+{% block title %}data{% endblock %}
 
 {% block content %}
   <div style="padding-top: 3rem">
@@ -43,6 +43,7 @@
 {% endblock %}
 
 {% block script %}
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
-<script type="text/javascript" charset="utf-8" src="{{ url_for('static', filename='js/sensors.js') }}"> </script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="{{ url_for('static', filename='js/shared.js') }}"> </script>
+<script type="text/javascript" charset="utf-8" src="{{ url_for('static', filename='js/data.js') }}"> </script>
 {% endblock %}
