--- a/laporte/templates/base.html
+++ b/laporte/templates/base.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{{ appname }} - {% block title %}{% endblock %}</title>
+    <title>{{ appname }} {% block title %}{% endblock %}</title>
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     {% block styles %}
     <!-- Bootstrap CSS -->
