--- a/laporte/templates/log.html
+++ b/laporte/templates/log.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
-
-{% block title %}log{% endblock %}
+{% block title %}Application Log{% endblock %}
 {% block styles %}
 {{super()}}
 <!-- Logs CSS -->
@@ -8,34 +7,39 @@
 {% endblock %}
 
 {% block content %}
-<table class="table table-sm sticky-header pt-5 pb-5">
+<table class="table table-sm sticky-header table-hover">
     <thead class="bg-light">
         <tr>
             <th class="w-10" scope="col">time</th>
             <th class="w-10" scope="col">event id</th>
-            <th class="w-10" scope="col">function</th>
-            <th class="w-70" scope="col">message</th>
+            <th class="w-20" scope="col">function</th>
+            <th class="w-60" scope="col">
+                <div class="d-flex justify-content-between">
+                    <div>message</div>
+                    <div class="font-weight-light">
+                        <form>
+                        <input type="checkbox" id="followLogs" checked /> follow
+                        <!-- <label class="font-weight-light nopadding" for="followLogs">Follow</label> -->
+                        </form>
+                    </div>
+                </div>
+            </th>
         </tr>
     </thead>
     <tbody id="log">
+        <tr>
+            <td class="text-center" colspan="4">
+                <div class="spinner-border mt-5 mr-1" role="status">
+                    <span class="sr-only">spinner</span>
+                </div>
+                loading...
+            </td>
+        </tr>
     </tbody>
 </table>
 
 <span id="log-end"></span>
-<footer class="bg-light text-center p-0 pt-1 fixed-bottom">
-    <div class='row justify-content-center'>
-        <div class="col text-right">
-            <span class="h5">{{ appname }}</span> Log </div>
-        <div class="col text-left">
-            <form>
-                <div class="form-group mb-0">
-                    <input type="checkbox" id="followLogs" checked />
-                    <label for="followLogs">Follow</label>
-                </div>
-            </form>
-        </div>
-    </div>
-</footer>
+
 {% endblock %}
 
 {% block script %}
