--- a/laporte/templates/doc.html
+++ b/laporte/templates/doc.html
@@ -5,7 +5,7 @@
 {% include 'swagger-ui-css.html' %}
 {% endblock %}
 
-{% block title %}documentation{% endblock %}
+{% block title %}Documentation{% endblock %}
 
 {% block content %}
     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="position:absolute;width:0;height:0">
