--- a/laporte/templates/metrics.html
+++ b/laporte/templates/metrics.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}Prometheus metrics{% endblock %}
+{% block title %}Prometheus Metrics{% endblock %}
 
 {% block content %}
 <div style="padding-top: 3rem">
