--- a/laporte/templates/data.html
+++ b/laporte/templates/data.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}data{% endblock %}
+{% block title %}Data{% endblock %}
 
 {% block content %}
   <div style="padding-top: 3rem">
