--- a/laporte/templates/scheduler.html
+++ b/laporte/templates/scheduler.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %}scheduler{% endblock %}
+{% block title %}Event Scheduler{% endblock %}
 {% block styles %}
 {{super()}}
 <!-- Logs CSS -->
