--- a/laporte/web/templates/metrics.html
+++ b/laporte/web/templates/metrics.html
@@ -10,6 +10,6 @@
 
 {% block script %}
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/3.0.1/socket.io.min.js"></script>
-<script type="text/javascript" charset="utf-8" src="{{ url_for('static', filename='js/shared.js') }}"> </script>
-<script type="text/javascript" charset="utf-8" src="{{ url_for('static', filename='js/metrics.js') }}"> </script>
+<script type="text/javascript" charset="utf-8" src="{{ url_for('web.static', filename='js/shared.js') }}"> </script>
+<script type="text/javascript" charset="utf-8" src="{{ url_for('web.static', filename='js/metrics.js') }}"> </script>
 {% endblock %}
